// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion all options renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-_r_p_"
          aria-expanded="true"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          data-testid="accordion-trigger-one"
          id="radix-_r_o_"
          type="button"
        >
          <div>
            one
            <span
              class="ml6 txt-normal"
            >
              I am active
            </span>
          </div>
        </button>
        <div
          aria-labelledby="radix-_r_o_"
          data-orientation="vertical"
          data-state="open"
          id="radix-_r_p_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="py6 px6 txt-l bg-red-light"
          >
            First body
          </div>
        </div>
      </div>
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_r_"
          aria-expanded="false"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-_r_q_"
          type="button"
        >
          <div>
            two
          </div>
        </button>
        <div
          aria-labelledby="radix-_r_q_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_r_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_t_"
          aria-expanded="false"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-third"
          id="radix-_r_s_"
          type="button"
        >
          <div>
            third
          </div>
        </button>
        <div
          aria-labelledby="radix-_r_s_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_t_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Accordion basic renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_1_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-one"
          id="radix-_r_0_"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_0_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_1_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_3_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-_r_2_"
          type="button"
        >
          <span>
            two
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_2_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_3_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_5_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-three"
          id="radix-_r_4_"
          type="button"
        >
          <span>
            three
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_4_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_5_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Accordion disabled renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_d_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-one"
          id="radix-_r_c_"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_c_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_d_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_f_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-_r_e_"
          type="button"
        >
          <span>
            two
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_e_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_f_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-_r_h_"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-default color-gray-light"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-three"
          disabled=""
          id="radix-_r_g_"
          type="button"
        >
          <span>
            three
          </span>
        </button>
        <div
          aria-labelledby="radix-_r_g_"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-_r_h_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;
